<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finalsuzu"
    tools:context="com.example.derrick.mymaruti.Second">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="31dp" />

    <Button
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="146dp" />

    <Button
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="332dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option2"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option3"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="290dp" />
</android.support.constraint.ConstraintLayout>
